<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".SignIn"
    android:padding="20sp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/cnn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:text="@string/hello_welcome"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/sign_in"
        android:textSize="18sp" />

<!--    yaha par login user nam and password aayega uska layout hai -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:text="@string/forgot_pass"
            tools:ignore="RtlCompat" />

<!--        ye android ka new version hai to button ki jagah par appcompatbutton use kara karo-->
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="@string/sign_in"
            android:textColor="#fff" />

<!--        ye signup vala text hai is par click kare to sinup vale page par jana chaiye
to uske liye hame id then neccessary hai -->

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/sign_up" />



    </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>