<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:contentDescription="@string/image_education"
        app:srcCompat="@drawable/cnn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/career_navigator"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:text="@string/career_navigator"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/quality_education"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:text="@string/quality_education"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:gravity="center_horizontal" />
</LinearLayout>